xkb: plug a memory leak in XkbCopySrvLedInfo (#20756)

X.Org Bug 20756 <http://bugs.freedesktop.org/show_bug.cgi?id=20756>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>